<resources>
    <string name="app_name">Snippy</string>
    <string name="menu_crop">Crop</string>
    <string name="menu_draw">Draw</string>
    <string name="menu_meme">Meme</string>
    <string name="menu_shapes">Shapes</string>
    <string name="menu_text">Text</string>
    <string name="menu_share">Share</string>

    <string name="title_activity_splash">Snippy</string>
    <string name="dummy_content">Snippy</string>
    <string name="splash_summary">
        You can instantly edit and share your screenshots after taking them. Click the picture to exit and take a screenshot!</string>

    <string name="title_activity_test">Test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="start_button">Start</string>
    <!--
    <string name="dummy_button">Dummy Button</string>
    -->
</resources>
